??-09-2012 4.0.104
- Bug fix: cached zip file reset after consecutive email attachment downloads by full zip.

20-09-2012 4.0.103
- Billing PDF templates got unwanted extra columns

20-09-2012 4.0.102
- GOTA didn't launch
- Bugfix: Copy/pasting products in the catalog of the billing module will work
- Duplicating active record relations will keep the primary key when it exists of more then one column

19-09-2012 4.0.101
- Default values for custom fields were not set correctly.
- Check for php 5.3 or greater when upgrading
- Bugfix: Creating a time-registration from a calendar event works now.


19-09-2012 4.0.100
- Invalid validation for agent in ticket
- Quota display was divided by 1024
- Updated Russian translation
- Updated Italian translation
- Added config option "$config["default_max_rows_list"]" to set the default for new users. (max is 50)
- Added Android detection for GOTA
- Automatically fill in start date for new project

17-09-2012 4.0.99
- Somehow pro debian package was missing

17-09-2012 4.0.98
- Bugfix: Ticket rates in Add/Edit ticket dialog will only be shown where there are ticket rates
- Bugfix: Validate if the selected agent can be agent for the selected ticket type
- Bugfix: Save button is shown in the Ticket administation dialog when adding rates
- Automatic creation of call reminder task with newly created orders.
- Bugfix: Changing user settings will no longer place old user data into a session in setCompatibilitySessionVars() themes will get changed right away
- Bugfix: Will not set default values for ActiveRecord set in the code when importing
- Bugfix: Will not convert a date field when no date is set when importing
- Bugfix: PDF for Invoice/Order wouldn't print total prices when piece price or product price where not printed
- Bugfix: PDF for Invoice/Order will now accept the page format from the template 
- Upgraded SabreDAV library to 1.6.4
- Allow underscores in custom ICS tags for importing.